--- a/public/index.html
+++ b/public/index.html
@@ -8,96 +8,183 @@
     body { font-family: sans-serif; margin: 0; padding: 1rem; background: #fefefe; }
     h1 { font-size: 1.5rem; text-align: center; margin-bottom: 1rem; }
     .menu { display: flex; flex-direction: column; gap: 1rem; max-width: 600px; margin: 0 auto; }
-    .section { padding: 1rem; border: 1px solid #ccc; border-radius: 8px; background: #fff; transition: background 0.3s; }
-    .details { display: none; margin-top: 1rem; flex-direction: column; }
-    .active .details { display: flex; }
-    .details button { margin-top: 0.5rem; padding: 0.5rem; font-size: 1rem; }
-    .back-button { margin-top: 1rem; padding: 0.5rem; font-size: 1rem; }
-    #map { display: none; height: 200px; background: #ddd; position: relative; overflow: hidden; }
-    #courier { width: 30px; height: 30px; background: black; border-radius: 50%; position: absolute; top: 50%; transform: translateY(-50%); transition: left 1s linear; }
-    @media (max-width: 500px) {
-      .section { font-size: 0.95rem; }
-      .details button, .back-button { font-size: 0.95rem; padding: 0.4rem; }
+    .section {
+      padding: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      background: #fff;
+      transition: background 0.3s;
     }
+    .section.locked {
+      background: #f0f0f0;
+      color: #999;
+    }
+    .section .label {
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+    .section.locked .label::after {
+      content: "（已售罄，請稍待補貨）";
+      font-size: 0.9rem;
+      color: red;
+      margin-left: 0.5rem;
+    }
+    .details {
+      display: none;
+      margin-top: 1rem;
+      flex-direction: column;
+    }
+    .active .details { display: flex; }
+    .details button {
+      margin-top: 0.5rem;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+    .locked-message {
+      color: red;
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+    .back-button {
+      margin-top: 1rem;
+      padding: 0.5rem;
+      font-size: 1rem;
+    }
+    #map, #grid, #delivered, #thanks { display: none; text-align: center; }
+    #map {
+      height: 300px;
+      background: linear-gradient(#e0f7fa, #b2ebf2);
+      position: relative;
+      overflow: hidden;
+    }
+    #courier {
+      width: 20px; height: 20px; border-radius: 50%; background: red;
+      position: absolute; top: 10px; left: 10px; transition: all 10s linear;
+    }
+    #user {
+      width: 20px; height: 20px; border-radius: 50%; background: blue;
+      position: absolute; top: 150px; left: 150px;
+    }
+    #arrow {
+      width: 0; height: 0; border-left: 10px solid transparent;
+      border-right: 10px solid transparent; border-bottom: 20px solid black;
+      position: absolute; top: 140px; left: 155px;
+      transform-origin: center bottom;
+      transition: transform 0.1s linear;
+    }
+    #grid table { width: 100%; max-width: 300px; margin: 1rem auto; border-collapse: collapse; }
+    #grid td {
+      width: 25%; height: 50px;
+      border: 1px solid #000;
+      text-align: center;
+      vertical-align: middle;
+      background: #fff;
+    }
+    #grid .highlight { background: red; color: white; }
+    button.confirm { margin-top: 1rem; font-size: 1rem; padding: 0.5rem 1rem; }
   </style>
 </head>
 <body>
   <h1>外送系統</h1>
   <div id="menu" class="menu"></div>
+
   <div id="map">
     <div id="courier"></div>
+    <div id="user"></div>
+    <div id="arrow"></div>
+    <p>外送員正在前往您所在位置...</p>
   </div>
-  <div id="delivered" style="display:none; text-align:center;">
-    <p>您的餐點已送達</p>
-    <button onclick="confirmDelivery()">確認收餐</button>
+
+  <div id="delivered">
+    <p>您的餐點已送達！</p>
+    <button class="confirm" onclick="confirmDelivery()">確認收餐</button>
   </div>
-  <div id="final" style="display:none; text-align:center;">
-    <div id="grid" class="grid"></div>
-    <p id="locationText"></p>
-    <button onclick="goHome()">回首頁</button>
+  <div id="grid">
+    <table id="gridTable"></table>
+    <p id="pickupText">請查收您的餐點，取餐位置為：</p>
+  </div>
+  <div id="thanks">
+    <p>謝謝您的購買！</p>
+    <button class="confirm" onclick="goBackHome()">回首頁</button>
   </div>
 
   <script>
-    const menuData = [
-      { section: "主食", items: [
-        { label: "小辣", motor: "motor1" },
-        { label: "中辣", motor: "motor2" },
-        { label: "大辣", motor: "motor3" }
-      ]},
-      { section: "飲料", items: [
-        { label: "無糖", motor: "motor2" },
-        { label: "微糖", motor: "motor1" },
-        { label: "全糖", motor: "motor3" }
-      ]}
-    ];
+    const menuData = {
+      火山豆腐: [
+        { label: '小辣', motor: 'motor1' },
+        { label: '中辣', motor: 'motor2' },
+        { label: '大辣', motor: 'motor3' }
+      ],
+      青檸茶: [
+        { label: '微糖', motor: 'motor1' },
+        { label: '半糖', motor: 'motor2' },
+        { label: '全糖', motor: 'motor4' }
+      ],
+      粒子豆腐: [
+        { label: '附湯', motor: 'motor3' },
+        { label: '不附湯', motor: 'motor2' }
+      ]
+    };
 
     const lockStatus = {};
     const menuDiv = document.getElementById('menu');
     let selectedMotor = '';
 
-    menuData.forEach(({ section, items }) => {
-      const container = document.createElement('div');
-      container.className = 'section';
-      container.innerHTML = `<div class="label">${section}</div>
+    async function syncLockStatus() {
+      try {
+        const res = await fetch('https://cwywwww.onrender.com/status');
+        const data = await res.json();
+        Object.assign(lockStatus, data);
+        updateLockUI();
+      } catch (e) {
+        console.error('同步狀態失敗', e);
+      }
+    }
+    setInterval(syncLockStatus, 1000);
+
+    Object.entries(menuData).forEach(([label, items]) => {
+      const section = document.createElement('div');
+      section.className = 'section';
+      section.innerHTML = `<div class="label">${label}</div>
         <div class="details">
           <div class="item-buttons">
             ${items.map(i => `<button class="order-btn" data-motor="${i.motor}" onclick="prepareDelivery('${i.motor}')">${i.label}</button>`).join('')}
           </div>
+          <div class="locked-message" style="display:none;">該選項已售罄，請稍後補貨</div>
           <button class="back-button" onclick="goBack()">返回上一頁</button>
         </div>`;
-      container.addEventListener('click', () => {
-        if (container.classList.contains('locked')) return;
+      section.addEventListener('click', () => {
+        if (items.every(i => lockStatus[i.motor])) return;
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-        container.classList.add('active');
+        section.classList.add('active');
       });
-      menuDiv.appendChild(container);
+      menuDiv.appendChild(section);
     });
 
     function prepareDelivery(motorKey) {
       if (lockStatus[motorKey]) return;
       selectedMotor = motorKey;
+      lockStatus[motorKey] = true;
+      updateLockUI();
+      goBack();
 
-      fetch('https://cwywwww.onrender.com/lock', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ motor: motorKey })
-      });
+      setTimeout(() => {
+        lockStatus[motorKey] = false;
+        updateLockUI();
+      }, 7000);
 
       document.getElementById('menu').style.display = 'none';
       document.getElementById('map').style.display = 'block';
+      startGeoTracking();
 
       const courier = document.getElementById('courier');
-      courier.style.left = '0%';
-      let progress = 0;
-      const interval = setInterval(() => {
-        progress += 10;
-        courier.style.left = `${progress}%`;
-        if (progress >= 100) {
-          clearInterval(interval);
-          document.getElementById('map').style.display = 'none';
-          document.getElementById('delivered').style.display = 'block';
-        }
-      }, 1000);
+      courier.style.left = '150px';
+      courier.style.top = '150px';
+
+      setTimeout(() => {
+        document.getElementById('map').style.display = 'none';
+        document.getElementById('delivered').style.display = 'block';
+      }, 10000);
     }
 
     async function confirmDelivery() {
@@ -110,49 +197,86 @@
       });
     }
 
-    function showGrid(motor) {
-      const grid = document.getElementById('grid');
-      grid.innerHTML = '';
-      let pos = parseInt(motor.replace('motor', '')) - 1;
-      for (let i = 0; i < 16; i++) {
-        const cell = document.createElement('div');
-        cell.className = 'cell';
-        cell.textContent = `${Math.floor(i / 4) + 1}-${i % 4 + 1}`;
-        if (i === pos) cell.classList.add('active');
-        grid.appendChild(cell);
+    function showGrid(motorKey) {
+      const table = document.getElementById('gridTable');
+      table.innerHTML = '';
+      const pos = parseInt(motorKey.replace('motor', ''));
+      const row = Math.floor((pos - 1) / 4) + 1;
+      const col = ((pos - 1) % 4) + 1;
+      for (let r = 1; r <= 4; r++) {
+        const tr = document.createElement('tr');
+        for (let c = 1; c <= 4; c++) {
+          const td = document.createElement('td');
+          if (r === row && c === col) td.className = 'highlight';
+          td.textContent = `${r}-${c}`;
+          tr.appendChild(td);
+        }
+        table.appendChild(tr);
       }
-      document.getElementById('final').style.display = 'block';
-      document.getElementById('locationText').textContent = `請查收您的餐點，取餐位置為 ${Math.floor(pos / 4) + 1}-${pos % 4 + 1}`;
+      document.getElementById('pickupText').textContent = `請查收您的餐點，取餐位置為：${row}-${col}`;
+      document.getElementById('grid').style.display = 'block';
+      setTimeout(() => {
+        document.getElementById('grid').style.display = 'none';
+        document.getElementById('thanks').style.display = 'block';
+      }, 7000);
+    }
+
+    function updateLockUI() {
+      document.querySelectorAll('.order-btn').forEach(btn => {
+        const motorKey = btn.dataset.motor;
+        btn.style.display = lockStatus[motorKey] ? 'none' : 'inline-block';
+      });
+
+      document.querySelectorAll('.section').forEach(section => {
+        const buttons = section.querySelectorAll('.order-btn');
+        const lockedMessage = section.querySelector('.locked-message');
+        const backButton = section.querySelector('.back-button');
+
+        const allLocked = [...buttons].every(btn => lockStatus[btn.dataset.motor]);
+        section.classList.toggle('locked', allLocked);
+        lockedMessage.style.display = allLocked ? 'block' : 'none';
+        backButton.style.display = allLocked ? 'inline-block' : 'none';
+      });
     }
 
     function goBack() {
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
     }
 
-    function goHome() {
-      document.getElementById('final').style.display = 'none';
+    function goBackHome() {
+      document.getElementById('thanks').style.display = 'none';
       document.getElementById('menu').style.display = 'block';
     }
 
-    async function syncLockStatus() {
-      try {
-        const res = await fetch('https://cwywwww.onrender.com/status');
-        const json = await res.json();
-        Object.assign(lockStatus, json);
-        updateLockUI();
-      } catch (err) {
-        console.log('同步狀態失敗', err);
+    function startGeoTracking() {
+      navigator.geolocation.watchPosition(pos => {
+        const user = document.getElementById('user');
+        const arrow = document.getElementById('arrow');
+        user.style.left = '150px';
+        user.style.top = '150px';
+        arrow.style.left = '155px';
+        arrow.style.top = '140px';
+      });
+
+      if (window.DeviceOrientationEvent && typeof DeviceOrientationEvent.requestPermission === 'function') {
+        document.addEventListener('click', () => {
+          DeviceOrientationEvent.requestPermission().then(state => {
+            if (state === 'granted') {
+              window.addEventListener('deviceorientation', handleOrientation);
+            }
+          });
+        });
+      } else {
+        window.addEventListener('deviceorientation', handleOrientation);
       }
     }
-    setInterval(syncLockStatus, 1000);
 
-    function updateLockUI() {
-      document.querySelectorAll('.order-btn').forEach(btn => {
-        const motor = btn.dataset.motor;
-        const isLocked = lockStatus[motor];
-        btn.disabled = isLocked;
-        btn.style.opacity = isLocked ? '0.4' : '1';
-      });
+    function handleOrientation(event) {
+      const arrow = document.getElementById('arrow');
+      if (arrow && typeof event.alpha === 'number') {
+        const angle = event.alpha;
+        arrow.style.transform = `translate(-50%, -50%) rotate(${angle}deg)`;
+      }
     }
   </script>
 </body>
