--- a/public/index.html
+++ b/public/index.html
@@ -1,111 +1,56 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>偽外送平台</title>
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 1rem; background: #fefefe; }
-    h1 { font-size: 1.5rem; text-align: center; margin-bottom: 1rem; }
-    .menu { display: flex; flex-direction: column; gap: 1rem; max-width: 600px; margin: 0 auto; }
-    .section {
-      padding: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background: #fff;
-      transition: background 0.3s;
-    }
-    .section.locked {
-      background: #f0f0f0;
-      color: #999;
-    }
-    .section .label {
-      font-weight: bold;
-      font-size: 1.1rem;
-    }
-    .section.locked .label::after {
-      content: "（已售罄，請稍待補貨）";
-      font-size: 0.9rem;
-      color: red;
-      margin-left: 0.5rem;
-    }
-    .details {
-      display: none;
-      margin-top: 1rem;
-      flex-direction: column;
-    }
-    .active .details { display: flex; }
-    .details button {
-      margin-top: 0.5rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-    .locked-message {
-      color: red;
-      font-weight: bold;
-      margin-top: 1rem;
-    }
-    .back-button {
-      margin-top: 1rem;
-      padding: 0.5rem;
-      font-size: 1rem;
-    }
-    #map, #grid, #delivered, #thanks { display: none; text-align: center; }
-    #map {
-      height: 300px;
-      background: linear-gradient(#e0f7fa, #b2ebf2);
-      position: relative;
-      overflow: hidden;
-    }
-    #courier {
-      width: 20px; height: 20px; border-radius: 50%; background: red;
-      position: absolute; top: 10px; left: 10px; transition: all 10s linear;
-    }
-    #user {
-      width: 20px; height: 20px; border-radius: 50%; background: blue;
-      position: absolute; top: 150px; left: 150px;
-    }
+    body { font-family: sans-serif; margin: 0; padding: 1rem; background: #fff; }
+    h1 { text-align: center; }
+    .menu { display: flex; flex-direction: column; gap: 1rem; max-width: 600px; margin: auto; }
+    .section { padding: 1rem; border: 1px solid #ccc; border-radius: 8px; background: #f9f9f9; }
+    .section .label { font-weight: bold; }
+    .details { display: none; flex-direction: column; gap: 0.5rem; margin-top: 0.5rem; }
+    .section.active .details { display: flex; }
+    .section.locked { background: #eee; color: #aaa; }
+    .section.locked .label::after { content: "（已售罄）"; color: red; margin-left: 0.5rem; }
+    button { padding: 0.5rem; font-size: 1rem; }
+    button:disabled { background: #ccc; color: #888; }
+    #map, #final { display: none; flex-direction: column; align-items: center; margin-top: 2rem; }
+    #map { height: 200px; justify-content: center; position: relative; }
+    #dot, #arrow { width: 20px; height: 20px; border-radius: 50%; position: absolute; }
+    #dot { background: red; left: 10%; transition: left 0.3s; }
     #arrow {
-      width: 0; height: 0; border-left: 10px solid transparent;
-      border-right: 10px solid transparent; border-bottom: 20px solid black;
-      position: absolute; top: 140px; left: 155px;
-      transform-origin: center bottom;
-      transition: transform 0.1s linear;
+      width: 0; height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 15px solid blue;
+      transform-origin: center;
     }
-    #grid table { width: 100%; max-width: 300px; margin: 1rem auto; border-collapse: collapse; }
-    #grid td {
-      width: 25%; height: 50px;
-      border: 1px solid #000;
-      text-align: center;
-      vertical-align: middle;
-      background: #fff;
+    #grid { display: grid; grid-template-columns: repeat(4, 50px); gap: 5px; margin: 1rem; }
+    .cell {
+      width: 50px; height: 50px;
+      border: 1px solid black;
+      display: flex; align-items: center; justify-content: center;
+      background: white;
     }
-    #grid .highlight { background: red; color: white; }
-    button.confirm { margin-top: 1rem; font-size: 1rem; padding: 0.5rem 1rem; }
+    .cell.active { background: red; color: white; }
   </style>
 </head>
 <body>
-  <h1>外送系統</h1>
+  <h1>外送平台</h1>
   <div id="menu" class="menu"></div>
 
   <div id="map">
-    <div id="courier"></div>
-    <div id="user"></div>
+    <div id="dot"></div>
     <div id="arrow"></div>
-    <p>外送員正在前往您所在位置...</p>
+    <p>外送員正在前往您的位置中…</p>
   </div>
 
-  <div id="delivered">
-    <p>您的餐點已送達！</p>
-    <button class="confirm" onclick="confirmDelivery()">確認收餐</button>
-  </div>
-  <div id="grid">
-    <table id="gridTable"></table>
-    <p id="pickupText">請查收您的餐點，取餐位置為：</p>
-  </div>
-  <div id="thanks">
-    <p>謝謝您的購買！</p>
-    <button class="confirm" onclick="goBackHome()">回首頁</button>
+  <div id="final">
+    <div id="grid"></div>
+    <p id="pickupText">請查收您的餐點</p>
+    <button onclick="finishOrder()">回首頁</button>
   </div>
 
   <script>
@@ -135,126 +80,118 @@
         { label: '重力水餃', motor: 'motor16' }
       ]
     };
-    
-    const menuDiv = document.getElementById('menu'); 
-    
-    setInterval(syncLockStatus, 1000);
 
-    Object.entries(menuData).forEach(([label, items]) => {
+    const lockStatus = {}; // motorX: true/false
+    let selectedMotor = '';
+    let deliveryProgress = 0;
+    let deliveryInterval;
+
+    const menuDiv = document.getElementById('menu');
+    Object.entries(menuData).forEach(([title, items]) => {
       const section = document.createElement('div');
       section.className = 'section';
-      section.innerHTML = `<div class="label">${label}</div>
+      section.innerHTML = `<div class="label">${title}</div>
         <div class="details">
-          <div class="item-buttons">
-            ${items.map(i => `<button class="order-btn" data-motor="${i.motor}" onclick="prepareDelivery('${i.motor}')">${i.label}</button>`).join('')}
-          </div>
-          <div class="locked-message" style="display:none;">該選項已售罄，請稍後補貨</div>
-          <button class="back-button" onclick="goBack()">返回上一頁</button>
+          ${items.map(i => `<button data-motor="${i.motor}">${i.label}</button>`).join('')}
         </div>`;
-      section.addEventListener('click', () => {
-        if (items.every(i => lockStatus[i.motor])) return;
-        document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-        section.classList.add('active');
-      });
+      section.addEventListener('click', () => section.classList.toggle('active'));
       menuDiv.appendChild(section);
     });
 
-    function prepareDelivery(motorKey) {
-      if (lockStatus[motorKey]) return;
-      selectedMotor = motorKey;
-      lockStatus[motorKey] = true;
-      updateLockUI();
-      goBack();
+    document.querySelectorAll('button[data-motor]').forEach(btn => {
+      btn.addEventListener('click', e => {
+        const motorKey = e.target.dataset.motor;
+        if (lockStatus[motorKey]) return;
 
-      setTimeout(() => {
-        lockStatus[motorKey] = false;
+        selectedMotor = motorKey;
+        lockStatus[motorKey] = true;
         updateLockUI();
-      }, 7000);
 
-      document.getElementById('menu').style.display = 'none';
-      document.getElementById('map').style.display = 'block';
-      startGeoTracking();
+        document.getElementById('menu').style.display = 'none';
+        document.getElementById('map').style.display = 'flex';
 
-      const courier = document.getElementById('courier');
-      courier.style.left = '150px';
-      courier.style.top = '150px';
+        deliveryProgress = 0;
+        updateMap();
 
-      setTimeout(() => {
-        document.getElementById('map').style.display = 'none';
-        document.getElementById('delivered').style.display = 'block';
-      }, 10000);
-    }
+        deliveryInterval = setInterval(() => {
+          deliveryProgress += 10;
+          updateMap();
+          if (deliveryProgress >= 100) {
+            clearInterval(deliveryInterval);
+            document.getElementById('map').style.display = 'none';
+            document.getElementById('final').style.display = 'block';
+            highlightGrid(selectedMotor);
+            document.getElementById('pickupText').innerText =
+              `請查收您的餐點，取餐位置為 ${motorToGrid(selectedMotor)}`;
+            fetch('https://cwywwww.onrender.com/send', {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ data: selectedMotor })
+            });
+          }
+        }, 1000);
 
-    async function confirmDelivery() {
-      document.getElementById('delivered').style.display = 'none';
-      showGrid(selectedMotor);
-      await fetch('https://cwywwww.onrender.com/send', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ data: selectedMotor })
+        setTimeout(() => {
+          lockStatus[motorKey] = false;
+          updateLockUI();
+        }, 7000);
       });
-    }
-
-    function showGrid(motorKey) {
-      const table = document.getElementById('gridTable');
-      table.innerHTML = '';
-      const pos = parseInt(motorKey.replace('motor', ''));
-      const row = Math.floor((pos - 1) / 4) + 1;
-      const col = ((pos - 1) % 4) + 1;
-      for (let r = 1; r <= 4; r++) {
-        const tr = document.createElement('tr');
-        for (let c = 1; c <= 4; c++) {
-          const td = document.createElement('td');
-          if (r === row && c === col) td.className = 'highlight';
-          td.textContent = `${r}-${c}`;
-          tr.appendChild(td);
-        }
-        table.appendChild(tr);
-      }
-      document.getElementById('pickupText').textContent = `請查收您的餐點，取餐位置為：${row}-${col}`;
-      document.getElementById('grid').style.display = 'block';
-      setTimeout(() => {
-        document.getElementById('grid').style.display = 'none';
-        document.getElementById('thanks').style.display = 'block';
-      }, 7000);
-    }
+    });
 
     function updateLockUI() {
-      document.querySelectorAll('.section').forEach(section => {
-        const buttons = section.querySelectorAll('.order-btn');
-        const lockedMessage = section.querySelector('.locked-message');
-        const backButton = section.querySelector('.back-button');
-
-        let allLocked = true;
-        buttons.forEach(btn => {
-          const motorKey = btn.dataset.motor;
-          if (lockStatus[motorKey]) {
-            btn.style.display = 'none';
-          } else {
-            btn.style.display = 'inline-block';
-            allLocked = false;
-          }
-        });
-
-        if (allLocked) {
-          section.classList.add('locked');
-          if (lockedMessage) lockedMessage.style.display = 'block';
-          if (backButton) backButton.style.display = 'inline-block';
-        } else {
-          section.classList.remove('locked');
-          if (lockedMessage) lockedMessage.style.display = 'none';
-          if (backButton) backButton.style.display = 'none';
-        }
+      document.querySelectorAll('button[data-motor]').forEach(btn => {
+        const motor = btn.dataset.motor;
+        btn.disabled = lockStatus[motor] || false;
       });
     }
 
-    function goBack() {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+    function updateMap() {
+      document.getElementById('dot').style.left = `${10 + deliveryProgress * 0.8}%`;
     }
 
-    function goBackHome() {
-      document.getElementById('thanks').style.display = 'none';
-      document.getElementById('menu').style.display = 'block';
+    function finishOrder() {
+      document.getElementById('final').style.display = 'none';
+      document.getElementById('menu').style.display = 'flex';
+      document.querySelectorAll('.cell').forEach(cell => cell.classList.remove('active'));
+    }
+
+    function motorToGrid(motor) {
+      const num = parseInt(motor.replace('motor', ''));
+      const row = Math.ceil(num / 4);
+      const col = ((num - 1) % 4) + 1;
+      return `${row}-${col}`;
+    }
+
+    function highlightGrid(motor) {
+      const grid = document.getElementById('grid');
+      grid.innerHTML = '';
+      for (let i = 1; i <= 16; i++) {
+        const div = document.createElement('div');
+        div.className = 'cell';
+        div.textContent = `${Math.ceil(i/4)}-${((i - 1) % 4) + 1}`;
+        if (motor === `motor${i}`) div.classList.add('active');
+        grid.appendChild(div);
+      }
+    }
+
+    // ✅ 地圖時才啟動指南針方向
+    if (window.DeviceOrientationEvent && typeof DeviceOrientationEvent.requestPermission === 'function') {
+      document.addEventListener('click', () => {
+        DeviceOrientationEvent.requestPermission().then(permission => {
+          if (permission === 'granted') {
+            window.addEventListener('deviceorientation', handleOrientation);
+          }
+        }).catch(console.error);
+      });
+    } else {
+      window.addEventListener('deviceorientation', handleOrientation);
+    }
+
+    function handleOrientation(event) {
+      const arrow = document.getElementById('arrow');
+      if (arrow && typeof event.alpha === 'number' && document.getElementById('map').style.display === 'flex') {
+        arrow.style.transform = `rotate(${event.alpha}deg)`;
+      }
     }
   </script>
 </body>
