--- a/public/index.html
+++ b/public/index.html
@@ -135,12 +135,12 @@
     }
 
     const menuData = {
-      火山豆腐: [
+      火豆腐: [
         { label: '小辣', motor: 'motor1' },
         { label: '中辣', motor: 'motor2' },
         { label: '大辣', motor: 'motor3' }
       ],
-      青檸茶: [
+      青清檸茶: [
         { label: '微糖', motor: 'motor4' },
         { label: '半糖', motor: 'motor5' },
         { label: '全糖', motor: 'motor6' }
@@ -153,12 +153,26 @@
         { label: '附湯', motor: 'motor9' },
         { label: '不附湯', motor: 'motor10' }
       ],
-      火山豆腐: [
+      豆腐: [
         { label: '小辣', motor: 'motor11' },
         { label: '中辣', motor: 'motor12' },
         { label: '大辣', motor: 'motor13' },
       ],
-      青檸茶: [
+      青茶: [
+      { label: '小辣', motor: 'motor14' },
+        { label: '中辣', motor: 'motor15' },
+        { label: '大辣', motor: 'motor16' },
+      ],
+      我腐: [
+        { label: '附湯', motor: 'motor9' },
+        { label: '不附湯', motor: 'motor10' }
+      ],
+      火腐: [
+        { label: '小辣', motor: 'motor11' },
+        { label: '中辣', motor: 'motor12' },
+        { label: '大辣', motor: 'motor13' },
+      ],
+      檸茶: [
       { label: '小辣', motor: 'motor14' },
         { label: '中辣', motor: 'motor15' },
         { label: '大辣', motor: 'motor16' },
