--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,14 @@
   </div>
 
   <script>
+    // 定位與方向偵測
     function startGeoTracking() {
       navigator.geolocation.watchPosition(pos => {
         const user = document.getElementById('user');
         const arrow = document.getElementById('arrow');
+        const lat = pos.coords.latitude;
+        const lng = pos.coords.longitude;
+        // 假設中心座標 → 定點繪製即可（示意）
         user.style.left = '150px';
         user.style.top = '150px';
         arrow.style.left = '155px';
@@ -121,7 +125,7 @@
 
       if (window.DeviceOrientationEvent) {
         window.addEventListener('deviceorientation', e => {
-          const angle = e.alpha;
+          const angle = e.alpha; // 使用 alpha 作為方向（順時針 0~360）
           const arrow = document.getElementById('arrow');
           if (angle != null) {
             arrow.style.transform = `rotate(${angle}deg)`;
@@ -136,16 +140,60 @@
         { label: '中辣', motor: 'motor2' },
         { label: '大辣', motor: 'motor3' }
       ],
-      青茶: [
+      青清檸茶: [
         { label: '微糖', motor: 'motor4' },
         { label: '半糖', motor: 'motor5' },
         { label: '全糖', motor: 'motor6' }
-      ]
+      ],
+      粒子豆腐: [
+        { label: '附湯', motor: 'motor7' },
+        { label: '不附湯', motor: 'motor8' },
+      ],
+      我豆腐: [
+        { label: '附湯', motor: 'motor9' },
+        { label: '不附湯', motor: 'motor10' }
+      ],
+      豆腐: [
+        { label: '小辣', motor: 'motor11' },
+        { label: '中辣', motor: 'motor12' },
+        { label: '大辣', motor: 'motor13' },
+      ],
+      青茶: [
+      { label: '小辣', motor: 'motor14' },
+        { label: '中辣', motor: 'motor15' },
+        { label: '大辣', motor: 'motor16' },
+      ],
+      我腐: [
+        { label: '附湯', motor: 'motor9' },
+        { label: '不附湯', motor: 'motor10' }
+      ],
+      火腐: [
+        { label: '小辣', motor: 'motor11' },
+        { label: '中辣', motor: 'motor12' },
+        { label: '大辣', motor: 'motor13' },
+      ],
+      檸茶: [
+      { label: '小辣', motor: 'motor14' },
+        { label: '中辣', motor: 'motor15' },
+        { label: '大辣', motor: 'motor16' },
+      ],
     };
 
     const lockStatus = {};
     const menuDiv = document.getElementById('menu');
     let selectedMotor = '';
+
+    async function syncLockStatus() {
+      try {
+        const res = await fetch('https://cwywwww.onrender.com/status');
+        const data = await res.json();
+        Object.assign(lockStatus, data);
+        updateLockUI();
+      } catch (e) {
+        console.error('同步狀態失敗', e);
+      }
+    }
+    setInterval(syncLockStatus, 1000);
 
     Object.entries(menuData).forEach(([label, items]) => {
       const section = document.createElement('div');
@@ -166,23 +214,18 @@
       menuDiv.appendChild(section);
     });
 
-    async function prepareDelivery(motorKey) {
+    function prepareDelivery(motorKey) {
       if (lockStatus[motorKey]) return;
       selectedMotor = motorKey;
       lockStatus[motorKey] = true;
       updateLockUI();
-      await fetch('https://vber-vhtk.onrender.com/lock', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ motor: motorKey })
-      });
+      goBack();
 
       setTimeout(() => {
         lockStatus[motorKey] = false;
         updateLockUI();
       }, 7000);
 
-      goBack();
       document.getElementById('menu').style.display = 'none';
       document.getElementById('map').style.display = 'block';
       startGeoTracking();
@@ -200,7 +243,7 @@
     async function confirmDelivery() {
       document.getElementById('delivered').style.display = 'none';
       showGrid(selectedMotor);
-      await fetch('https://vber-vhtk.onrender.com/send', {
+      await fetch('https://cwywwww.onrender.com/send', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ data: selectedMotor })
@@ -268,18 +311,6 @@
       document.getElementById('thanks').style.display = 'none';
       document.getElementById('menu').style.display = 'block';
     }
-
-    async function syncLockStatus() {
-      try {
-        const res = await fetch('https://vber-vhtk.onrender.com/status');
-        const data = await res.json();
-        Object.assign(lockStatus, data);
-        updateLockUI();
-      } catch (e) {
-        console.error('同步狀態失敗', e);
-      }
-    }
-    setInterval(syncLockStatus, 1000);
   </script>
 </body>
 </html>
